--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <groupId>com.huaban</groupId>
     <artifactId>jieba-analysis</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.1_1.0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>结巴分词工具(jieba for java)</name>
@@ -154,6 +154,36 @@
                 </execution>
               </executions>
             </plugin>
+
+
+
+
+            <!-- bc for jar with dependency -->
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>com.huaban.analysis.jieba.Jieba</mainClass>
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                      <execution>
+                            <id>make-assembly</id> <!-- this is used for inheritance merges -->
+                                  <phase>package</phase> <!-- bind to the packaging phase -->
+                                  <goals>
+                                    <goal>single</goal>
+                                  </goals>
+                      </execution>
+                 </executions>
+            </plugin>
+            <!-- bc for jar with dependency -->
+
+
         </plugins>
     </build>
 
